--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increeibles que se pueden hacer con ramas</p>
-<<<<<<< HEAD
-            <p>Lo mejor que me a podido pasar es conocer a mi esposa y estudiar papayas.</p>
-=======
-            <p>Lo mejor que me a podido pasar es conocer a mi esposa y estudiar melon.</p>
->>>>>>> cabecera
+            <p>Lo mejor que me a podido pasar es conocer a mi esposa y estudiar codigo.</p>
         </div>
     </div>
 </body>
