--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" alt="">
                 MASTINPost <span>El post mas informativo</span>
             </div>
         <div id="post">
